# Cargo.toml

[package]
name = "mesh_udp_test"
version = "0.0.1"
edition = "2024"
resolver = "2"


[features]
default = []
gen = ["dep:prost-build", "dep:protoc-bin-vendored", "dep:walkdir"]
serde = ["dep:serde", "dep:serde_json"]
ts-gen = ["serde", "dep:specta", "dep:specta-typescript"]


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# futures = { version = "0" }
meshtastic_protobufs = "2"
prost = "0.14"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
specta = { git = "https://github.com/specta-rs/specta.git", rev = "b596ef0", optional = true, features = [
    "derive",
    "export",
    "chrono",
], version = "=2.0.0-rc.22" }
specta-typescript = { git = "https://github.com/specta-rs/specta.git", rev = "b596ef0", optional = true, version = "=0.0.9" }
tokio = { version = "1", features = ["full"] }
# tokio-util = { version = "0", features = ["net", "codec"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"


[build-dependencies]
anyhow = "1"
build-data = "0"
prost-build = { version = "0.14", optional = true }
protoc-bin-vendored = { version = "3.2.0", optional = true }
walkdir = { version = "2.5", optional = true }


[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1


[profile.minsize]
inherits = "release"
strip = true
lto = "fat"
opt-level = "s"
panic = "abort"

# EOF
